graph editor: fix align of profile picture on nav bar

--- a/app/assets/style/graph/nav.css
+++ b/app/assets/style/graph/nav.css
@@ -164,6 +164,7 @@ nav > .profile-picture {
     -webkit-flex:none;
     flex: none;
     position:relative;
+    padding-right:0;
 }
 
 nav > .profile-picture > img {
